Added link to header
* Added lagerstandort as a link to our navbar header

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -31,6 +31,7 @@
 				<a href="/materialtyp">Materialtyp</a>
 			 </div>
 			</div>
+			<a href="/lagerstandort" class="active">Lagerstandort</a>
 
 			<div class="dropdownAdmin">
 				<button class="dropbtnAdmin">Konto
