--- a/src/main/resources/templates/fragment/topnav.html
+++ b/src/main/resources/templates/fragment/topnav.html
@@ -8,7 +8,7 @@
 			</div>
 			
 			<div class="dropdown">
-			 <button class="dropbtn">Veranstaltung
+			 <button class="dropbtn" th:text="#{veranstaltung}">
 				<i class="fa fa-caret-down"></i>
 			 </button>
 			 <div class="dropdown-content">
