--- a/src/main/resources/templates/lagerstandort.html
+++ b/src/main/resources/templates/lagerstandort.html
@@ -1,115 +1,130 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-<title>Lagerstandort</title>
-</head>
-<body>
-	<h3>Einen neuen Lagerstandort hinzuf&uuml;gen</h3>
-    <form action="#" th:action="@{/lagerstandort}" th:object="${lagerstandort}" method="post">
+<!doctype html>
+	<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+		<head th:fragment="head">
+		<title th:text="@{${@environment.getProperty('matilda.mainsite')}}" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<div th:replace="/fragment/footer :: footer"></div>
+	    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+	    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+	 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+	 	<link rel="import" href="/fragment/topnav.html">
+		<link rel='stylesheet' href='webjars/fullcalendar/3.5.1/dist/fullcalendar.css' />
+		<script src="webjars/jquery/2.0.3/jquery.min.js"></script>
+		<script src='webjars/moment/2.19.1/min/moment.min.js'></script>
+		<script src='webjars/fullcalendar/3.5.1/dist/fullcalendar.js'></script>
+		<script type="text/javascript">
+		$(document).ready(function() {
+			$('#calendar').fullCalendar({
+				height: 655,
+				events: {
+					url : '/api/event/all'
+				}
+			});
+		});
+		</script>
+	</head>
+	<body>
+		<head th:replace="/fragment/header :: header"></head>
+		<h3>Einen neuen Lagerstandort hinzuf&uuml;gen</h3>
+    	<form action="#" th:action="@{/lagerstandort}" th:object="${lagerstandort}" method="post">
     
 	    <p class="error-message"
-	    th:if="${#fields.hasGlobalErrors()}"
-	    th:each="error : ${#fields.errors('global')}"
- 		th:text="${error}">Validation error</p>
+	    	th:if="${#fields.hasGlobalErrors()}"
+	    	th:each="error : ${#fields.errors('global')}"
+ 			th:text="${error}">Validation error</p>
                    
 		<div class="form-group"
-        th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
-        <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('name')}"
-        th:text="${error}">Validation error</p>
+        	th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
+        	<label for="name" class="control-label">Name</label>
+        	<input id="name"
+        		class="form-control"
+        		th:field="*{name}"/>
+        	<p class="error-message"
+       			th:each="error: ${#fields.errors('name')}"
+        		th:text="${error}">Validation error</p>
        	</div>
        	
        	<div class="form-group"
-        th:classappend="${#fields.hasErrors('adresse')}? 'has-error':''">
-        <label for="adresse" class="control-label">Adresse</label>
-        <input id="adresse"
-        class="form-control"
-        th:field="*{adresse}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('adresse')}"
-        th:text="${error}">Validation error</p>
+        	th:classappend="${#fields.hasErrors('adresse')}? 'has-error':''">
+        	<label for="adresse" class="control-label">Adresse</label>
+        	<input id="adresse"
+        	class="form-control"
+        	th:field="*{adresse}"/>
+        	<p class="error-message"
+       			th:each="error: ${#fields.errors('adresse')}"
+        		th:text="${error}">Validation error</p>
        	</div>
        	
 		<div class="form-group"
-        th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
-        <label for="beschreibung" class="control-label">Beschreibung</label>
-        <input id="beschreibung"
-        class="form-control"
-        th:field="*{beschreibung}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('beschreibung')}"
-        th:text="${error}">Validation error</p>
+        	th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
+        	<label for="beschreibung" class="control-label">Beschreibung</label>
+        	<input id="beschreibung"
+        		class="form-control"
+        		th:field="*{beschreibung}"/>
+        	<p class="error-message"
+       			th:each="error: ${#fields.errors('beschreibung')}"
+        		th:text="${error}">Validation error</p>
        	</div>
         
         <div class="form-group"
-        th:classappend="${#fields.hasErrors('benutzer')}? 'has-error':''">
-        <label for="benutzer" class="control-label">Verantwortlicher</label>
-        <select th:field="*{benutzer}">
-  			<option th:each="benutzer : ${alleBenutzer}" 
-         	 th:value="${benutzer.id}" 
-       	     th:text="${benutzer.benutzername}"></option>
-		</select></p>
-		<p class="error-message"
-       	th:each="error: ${#fields.errors('benutzer')}"
-        th:text="${error}">Validation error</p>
+        	th:classappend="${#fields.hasErrors('benutzer')}? 'has-error':''">
+        	<label for="benutzer" class="control-label">Verantwortlicher</label>
+        	<select th:field="*{benutzer}">
+  				<option th:each="benutzer : ${alleBenutzer}" 
+         	 		th:value="${benutzer.id}" 
+       	     		th:text="${benutzer.benutzername}"></option>
+			</select>
+			<p class="error-message"
+       			th:each="error: ${#fields.errors('benutzer')}"
+        		th:text="${error}">Validation error</p>
        	</div>
 		
-        <p><input type="submit" value="Submit" /> </p>
-    </form>
-<h2>Übersicht Lagerstandorte</h2>
-<div th:unless="${#lists.isEmpty(lagerstandorten)}">
-<table class="table table-striped">
-<thead>
-<tr>
-<th>Name</th>
-<th>Adresse</th>
-<th>Beschreibung</th>
-<th>Verantwortlicher</th>
-</tr>
-</thead>
-<dl th:each="lagerstandort : ${lagerstandorten}">
-<tr>
-<td th:text="${lagerstandort.name}"></td>
-<td th:text="${lagerstandort.adresse}"></td>
-<td th:text="${lagerstandort.beschreibung}"></td>
-<td th:text="${lagerstandort.benutzer.benutzername}"></td>
-<td>
-<a href="#" data-th-href="@{/lagerstandortupdate/{id}(id=${lagerstandort.id})}">&Auml;ndern</a>
-</td>
-</tr>
-</table>
-</div>
-<div th:if="${#lists.isEmpty(lagerstandorten)}">
-<p>Es gibt kein Lagerstandort</p>
-</div>
-<hr/>
-<div class="container">
-    <div class="row">
+        <p><input type="submit" value="Submit" /></p>
+    	</form>
+		<h2>Übersicht Lagerstandorte</h2>
+		<div th:unless="${#lists.isEmpty(lagerstandorten)}">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Adresse</th>
+					<th>Beschreibung</th>
+					<th>Verantwortlicher</th>
+				</tr>
+			</thead>
+			<dl th:each="lagerstandort : ${lagerstandorten}">
+			<tr>
+				<td th:text="${lagerstandort.name}"></td>
+				<td th:text="${lagerstandort.adresse}"></td>
+				<td th:text="${lagerstandort.beschreibung}"></td>
+				<td th:text="${lagerstandort.benutzer.benutzername}"></td>
+				<td>
+					<a href="#" data-th-href="@{/lagerstandortupdate/{id}(id=${lagerstandort.id})}">&Auml;ndern</a>
+				</td>
+			</tr>
+		</table>
+		</div>
+		<div th:if="${#lists.isEmpty(lagerstandorten)}">
+			<p>Es gibt kein Lagerstandort</p>
+		</div>
+		<hr/>
+		<div class="container">
+    	<div class="row">
         <div class="col-md-6 col-md-offset-3">
-
-            <div th:if="${param.success}">
-                <div class="alert alert-info">
-                    Der neue Lagerstandort wurde erfolgreich eingetragen!
-                </div>
-            </div>
-            <div th:if="${param.loeschen}">
-                <div class="alert alert-info">
-                    Der  Lagerstandort wurde erfolgreich gelöscht!
-                </div>
-            </div>
-            
-
-</div>
-<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-</body>
+			<div th:if="${param.success}">
+				<div class="alert alert-info">Der neue Lagerstandort wurde erfolgreich eingetragen!</div>
+			</div>
+			<div th:if="${param.loeschen}">
+				<div class="alert alert-info">Der  Lagerstandort wurde erfolgreich gelöscht!</div>
+			</div>
+		</div>
+		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+		<footer>
+			<div class="footer">
+				<a href="#Impressum" class="footerText">Impressum</a>
+			</div>
+		</footer>
+	</body>
+</html>
