--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 	                    </div>
 	                </div>
 	                <div class="form-group">
-	                    <label for="username">Benutzername</label>:
+	                    <label for="username" th:text="#{benutzername}" />:
 	                    <input type="text"
 	                           id="username"
 	                           name="username"
@@ -37,7 +37,7 @@
 	                           placeholder="Username"/>
 	                </div>
 	                	<div class="form-group">
-		                    <label for="password">Passwort</label>:
+		                    <label for="password" th:text="#{passwort}" />:
 	    	                <input type="password"
 	                           id="password"
 	                           name="password"
