--- a/src/main/resources/templates/materialverwaltung.html
+++ b/src/main/resources/templates/materialverwaltung.html
@@ -1,78 +1,31 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-
-	<head th:replace="/fragment/header :: head"></head>
-	
-	<body>
-		<div class="topnav" id="myTopnav">
-		<!--	<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo"> -->
-			<a href="/" class="active">MATILDA</a>
-			<div class="dropdown">
-			 <button class="dropbtn">Materialverwaltung
-				<i class="fa fa-caret-down"></i>
-			 </button>
-			 <div class="dropdown-content">
-				<a href="material">Materialeingabe</a>
-			 </div>
-			</div>
-			
-			<div class="dropdown">
-			 <button class="dropbtn">Veranstaltung
-				<i class="fa fa-caret-down"></i>
-			 </button>
-			 <div class="dropdown-content">
-				<a href="veranstaltung">Veranstaltung erstellen</a>
-			 </div>
-			</div>
-			
-			<div class="dropdown">
-			 <button class="dropbtn">Typen
-				<i class="fa fa-caret-down"></i>
-			 </button>
-			 <div class="dropdown-content">
-				<a href="/einheitentyp">Einheitentyp</a>
-				<a href="/mitarbeitertyp">Mitarbeitertyp</a>
-				<a href="/materialtyp">Materialtyp</a>
-			 </div>
-			</div>
-
-			<div class="dropdownAdmin">
-				<button class="dropbtnAdmin">Konto
-					<i class="fa fa-caret-down"></i>
-			 	</button>
-				<div class="dropdown-content-admin">
-					<div sec:authorize="hasAuthority('ADMIN')">
-						<a href="mitarbeiterverwaltung">Mitarbeiterverwaltung</a>
-						<a href="registration">Benutzerregistrierung</a>
-					</div>
-					<div sec:authorize="hasAuthority('BENUTZER')">
-						<a href="passwortaenderung">Passwort ändern</a>
-					</div>
-					<div>
-						<a href="javascript: document.logoutForm.submit()" > Sign out </a>
-						<form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
-      						<input hidden type="submit" value="Logout"/>
-						</form>
-					</div>
-				</div>
-			</div>
-			
-		<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-				
-		</div>
-
-		<script>
-			function myFunction() {
-				var x = document.getElementById("myTopnav");
-				if (x.className === "topnav") {
-					x.className += " responsive";
-				} else {
-					x.className = "topnav";
+	<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+		<head th:fragment="head">
+		<title th:text="@{${@environment.getProperty('matilda.mainsite')}}" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<div th:replace="/fragment/footer :: footer"></div>
+	    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+	    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+	 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+	 	<link rel="import" href="/fragment/topnav.html">
+		<link rel='stylesheet' href='webjars/fullcalendar/3.5.1/dist/fullcalendar.css' />
+		<script src="webjars/jquery/2.0.3/jquery.min.js"></script>
+		<script src='webjars/moment/2.19.1/min/moment.min.js'></script>
+		<script src='webjars/fullcalendar/3.5.1/dist/fullcalendar.js'></script>
+		<script type="text/javascript">
+		$(document).ready(function() {
+			$('#calendar').fullCalendar({
+				height: 655,
+				events: {
+					url : '/api/event/all'
 				}
-			}
+			});
+		});
 		</script>
-		
-	     <div th:replace="/fragment/footer :: footer"></div>
+	</head>
+	<body>
+		<head th:replace="/fragment/header :: header"></head>
 	     
 <h3>Ein neues Material hinzufügen</h3>
 <form action="#" th:action="@{/material}" th:object="${material}" method="post">
