--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,10 +13,29 @@
 		<script src="webjars/jquery/2.0.3/jquery.min.js"></script>
 		<script src='webjars/moment/2.19.1/min/moment.min.js'></script>
 		<script src='webjars/fullcalendar/3.5.1/dist/fullcalendar.js'></script>
-		<script type="text/javascript">
+		<script th:inline="javascript">
+		/*<![CDATA[*/var list_day = [[#{calendar.list_day}]];/*]]>*/
+		/*<![CDATA[*/var list_week = [[#{calendar.list_week}]];/*]]>*/
+		/*<![CDATA[*/var list_month = [[#{calendar.list_month}]];/*]]>*/
 		$(document).ready(function() {
 			$('#calendar').fullCalendar({
 				height: 655,
+				header: {
+			    	left: 'prev,next',
+					center: 'title',
+			        right: 'listDay,listWeek,listMonth'
+				},
+				// customize the button names,
+				// otherwise they'd all just say "list"
+				views: {
+			    	listDay: { buttonText: '' + list_day + '' },
+			        listWeek: { buttonText: '' + list_week + '' },
+			        listMonth: { buttonText: '' + list_month + '' }
+				},
+				defaultView: 'listMonth',
+			    navLinks: true,		// can click day/week names to navigate views
+			    editable: false,	// events are not drag 'n dropable
+			    eventLimit: true,	// allow "more" link when too many events
 				events: {
 					url : '/api/event/all'
 				}
