Enhancing changing of Password
* Enhancing changing of password

--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" th:href="@{/css/index.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
- 	<title th:text="@{${@environment.getProperty('matilda.passwordchange')}}" />
+ 	<title th:text="@{${@environment.getProperty('matilda.passwordchange')}}"></title>
 </head>
 	<body>
 		<head th:replace="/fragment/header :: header"></head>	
@@ -25,23 +25,33 @@
 					        <table>
 					            <thead>
 					                <tr>
+					                	<th></th>
 					                    <th>Username</th>
 					                    <th>Password</th>
 					                </tr>
 					            </thead>
 					            <tbody>
-					                <tr th:each="user, itemStat : *{users}">
-					                    <td><input th:field="*{users[__${itemStat.index}__].username}" /></td>
-					                    <td><input type="password" name="passwordField" th:field="*{users[__${itemStat.index}__].password}" id="pwd" /></td>
-					                    <!-- <td><input type="checkbox" name="checkboxName" id="myCheck" /></td> -->
-					                    <td><input type="radio" name="radiobutton" th:value="*{users[__${itemStat.index}__].username}" id="raidoButtonCheck" /></td>
-					                </tr>
+									<tr th:each="user, itemStat : *{users}">
+									    <td><input	type="radio"
+									    			name="radiobutton" 
+									    			th:value="*{users[__${itemStat.index}__].username}" 
+									    			class="radioButton" 
+									    			th:onclick="${'inputClick('''+ itemStat.index +''')'}" /></td>
+									    <td><input	th:field="*{users[__${itemStat.index}__].username}" 
+									    			disabled/></td>
+									    <td><input	class="passwordField" 
+									    			type="password" 
+									    			name="passwordField" 
+									    			th:field="*{users[__${itemStat.index}__].password}" 
+									    			th:id="${itemStat.index}" 
+									    			disabled/></td>
+									</tr>
 					            </tbody>
 					        </table>
-							<input type="submit" id="submitButton" th:value="Speichern">
+							<input type="submit" id="submitButton" th:value="Speichern"/>
 					    </fieldset>
 					</form>
-		
+
 		            <div th:if="${param.success}">
 		                <div class="alert alert-info">
 		                    The user password was successfully changed.
@@ -53,6 +63,16 @@
 
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+
+		<script>
+		    function inputClick(id) {
+		        var passwordFields = document.getElementsByClassName("passwordField");
+		        for(i = 0; i < passwordFields.length; i++) {
+		            passwordFields[i].disabled = true;
+		        }
+		        document.getElementById(id).removeAttribute('disabled');
+		    }
+		</script>
 		
 		<div th:replace="/fragment/footer :: footer"></div>
 	</body>
