--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,21 +9,30 @@
 	    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 	 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
 	 	<link rel="import" href="/fragment/topnav.html">
-		<link rel='stylesheet' href='webjars/fullcalendar/3.5.1/dist/fullcalendar.css' />
+		<link rel='stylesheet' href='webjars/fullcalendar/3.9.0/dist/fullcalendar.css' />
 		<script src="webjars/jquery/2.0.3/jquery.min.js"></script>
-		<script src='webjars/moment/2.19.1/min/moment.min.js'></script>
-		<script src='webjars/fullcalendar/3.5.1/dist/fullcalendar.js'></script>
+		<script src='webjars/moment/2.22.2/min/moment.min.js'></script>
+		<script src='webjars/fullcalendar/3.9.0/dist/fullcalendar.js'></script>
+		<script src='webjars/fullcalendar/3.9.0/dist/locale-all.js'></script>
 		<script th:inline="javascript">
+		
+		// currently, buttons have been deleted
 		/*<![CDATA[*/var list_day = [[#{calendar.list_day}]];/*]]>*/
 		/*<![CDATA[*/var list_week = [[#{calendar.list_week}]];/*]]>*/
 		/*<![CDATA[*/var list_month = [[#{calendar.list_month}]];/*]]>*/
+		
+		// reads language from browser, works for IE/SAFARI/CHROME/FF
+		var language = window.navigator.userLanguage || window.navigator.language;
+
 		$(document).ready(function() {
 			$('#calendar').fullCalendar({
+				locale: '' + language + '',
+				allDayText: '',
 				height: 655,
 				header: {
-			    	left: 'prev,next',
+			    	left: 'prev',
 					center: 'title',
-			        right: 'listDay,listWeek,listMonth'
+					right: 'next'
 				},
 				// customize the button names,
 				// otherwise they'd all just say "list"
