--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -20,7 +20,7 @@
 		        <div class="col-md-6 col-md-offset-3">
 		            <h1>Change Password</h1>
 		
-					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post" onsubmit="return checkPassword()">
+					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post">
 					    <fieldset>
 					        <table>
 					            <thead>
